--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
                                                          rel="noopener" style="color:#effaf5;">OpenStreetMap Polska</a>
                 </span>
               </span>
-        <button id='addNode'>Add node to map</button>
-        <button id='authenticate'>login</button>
-        <button id='logout'>logout</button>
+        <button id='addNode'>Dodaj testowy AED</button>
+        <button id='authenticate'>Zaloguj</button>
+        <button id='logout'>Wyloguj</button>
         <div id='user'>
             <h1 id='display_name'></h1>
             <h2 id='id'></h2>
@@ -103,6 +103,9 @@
         </div>
 
         <div id="map"></div>
+        <div>
+        <button class="add-button button is-large is-success is-rounded is-size-5 has-text-weight-light">+</button>
+        </div>
         <script src="./src/map.js"></script>
         <script src="./src/osm-integration.js"></script>
 
