--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
           <div class="sidebar is-invisible">
             <div id="poi-sidebar" class="card">
               <div id="sidebar-header">
-                <div class="columns is-vcentered is-flex p-1">
+                <div class="columns is-vcentered is-flex p-1 mr-0">
                   <div class="column is-one-quarter is-one-fifth-mobile "><img class="image" src="./src/img/card-image.png" alt="Placeholder image" id="sidebar-card-image" ></div>
                   <div class="column"><p class="title has-text-white-ter has-text-weight-light py-2" id="sidebar-caption"></p></div>
-                  <button class="delete is-medium is-hidden-touch is-pulled-right close-button mr-4 mt-4" onclick="hideSidebar()" aria-label="Close button"></button>
-                  <button class="delete is-large is-hidden-desktop is-pulled-right close-button mr-4 mt-4" onclick="hideSidebar()" aria-label="Close button"></button>
+                  <button class="delete is-medium is-hidden-touch is-pulled-right close-button mr-2 mt-4" onclick="hideSidebar()" aria-label="Close button"></button>
+                  <button class="delete is-large is-hidden-desktop is-pulled-right close-button mr-2 mt-4" onclick="hideSidebar()" aria-label="Close button"></button>
                 </div>
             </div>
               <div class="card-content">            
