refactored some code preparing for implementation of new functionality

--- a/index.html
+++ b/index.html
@@ -76,33 +76,42 @@
             </div>
           </nav>
 
-          <div class="sidebar is-invisible">
-            <div id="poi-sidebar" class="card">
+          <div id="sidebar-div" class="sidebar is-invisible">
+            <div class="card">
+
               <div id="sidebar-header">
-                <button class="delete is-medium is-pulled-right close-button m-3" onclick="hideSidebar()" aria-label="Close button"></button>
-                <div class="columns is-vcentered is-flex p-1">
-                  <div class="column is-one-quarter is-one-fifth-mobile "><img class="image" src="./src/img/card-image.png" alt="Placeholder image" id="sidebar-card-image" ></div>
-                  <div class="column"><p class="title has-text-white-ter has-text-weight-light py-2" id="sidebar-caption"></p></div>
+                <div class="columns is-vcentered is-flex p-1 mr-0">
+                  <div class="column is-one-quarter is-one-fifth-mobile ">
+                      <img class="image" src="./src/img/card-image.png" alt="Placeholder image" id="sidebar-card-image">
+                  </div>
+                  <div class="column">
+                      <p id="sidebar-caption" class="title has-text-white-ter has-text-weight-light py-2"></p>
+                  </div>
+                  <button id="sidebar-button-close-touch" aria-label="Zamknij ekran boczny"
+                          class="delete is-medium is-hidden-touch is-pulled-right close-button mr-2 mt-4"></button>
+                  <button id="sidebar-button-close-desktop" aria-label="Zamknij ekran boczny"
+                          class="delete is-large is-hidden-desktop is-pulled-right close-button mr-2 mt-4"></button>
                 </div>
               </div>
+
               <div class="card-content">
-                <div class="content"></div>
+                <div id="sidebar-content-div" class="content"></div>
               </div>
-                <hr class="my-1" />
-                <div class="card-content py-1 has-text-right ">
-                    <span id="refresh-time" class="has-text-grey is-size-7 has-text-weight-light">Dane z OpenStreetMap</span>
-                </div>
+
               <footer class="card-footer">
-                <a href="" class="has-background-success-light card-footer-item has-text-centered is-size-7 has-text-weight-semibold"
-                   target="_blank" rel="noopener" >Dodaj brakujące informacje</a>
+                  <div id="sidebar-footer-button-left">
+                    <a href="" target="_blank" rel="noopener"
+                       class="has-background-success-light card-footer-item has-text-centered is-size-7 has-text-weight-semibold"></a>
+                  </div>
                 <a href="https://wiki.openstreetmap.org/wiki/Pl:Przewodnik_dla_pocz%C4%85tkuj%C4%85cych"
-                   class="has-background-success-light card-footer-item has-text-centered is-size-7 has-text-weight-semibold"
-                   target="_blank" rel="noopener" >Przewodnik OSM</a>
+                   class="has-background-success-light card-footer-item has-text-centered is-size-7 has-text-weight-semibold" target="_blank" rel="noopener" >Przewodnik OSM</a>
               </footer>
+
+            </div>
           </div>
-        </div>
 
         <div id="map"></div>
+        <script src="./src/other-ui-stuff.js"></script>
         <script src="./src/map.js"></script>
         <script src="./src/osm-integration.js"></script>
 
