--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </head>
 
     <body>
-          <nav class="navbar has-background-green p-1 has-shadow" role="navigation" aria-label="main navigation">
+          <nav class="navbar is-success p-1 has-shadow" role="navigation" aria-label="main navigation">
             <div class="navbar-brand">
               <a class="has-text-weight-light navbar-item has-text-white-ter is-size-4 is-size-5-mobile" href="#">
                 Mapa <span class="has-text-weight-semibold pl-1 r-1">AED</span>
@@ -58,18 +58,22 @@
             <div id="navMenu" class="navbar-menu">
               <div class="navbar-end">
                 <div class="navbar-item">
-                  <button id='addNode' class="button is-rounded" aria-label="Wymaga zalogowania" disabled>Dodaj AED</button>
-                </div>
-                <div class="navbar-item">
-                  <span id="span-login" class="has-text-success-light has-text-weight-light navbar-item is-size-6 is-size-7-touch pl-0">
-                    <!-- Placeholder -->
-                  </span>
-                </div>
-                <div class="navbar-item">
                   <span class="has-text-white has-text-weight-light mr-1">dodaliśmy do mapy już ⚡</span>
                   <span class="has-text-white-ter is-size-5 has-text-weight-semibold" id="aed-number"></span>
                   <span class="has-text-white has-text-weight-light ml-1">AED</span>
                 </div>
+                <div class="navbar-item" id="span-login"></div>
+                <div id="navbar-logged" class="navbar-item has-dropdown is-hoverable">
+                  <a id="navbar-username" class="navbar-link has-text-white-ter has-text-weight-light is-arrowless">
+                  </a>
+              
+                  <div class="navbar-dropdown">
+                    <a class="navbar-item" id="logout">
+                      Wyloguj
+                    </a>
+                  </div>
+                </div>
+                <hr class="navbar-divider">
                 <div class="navbar-item pb-0">
                   <a href="https://github.com/openstreetmap-polska/aed-mapa" target="_blank" rel="noopener">
                     <img title="Odwiedź nasz Github" class="github" src="./src/img/github-image.png" alt="Github" width="24" height="24"></a>
@@ -125,7 +129,12 @@
           <button class="modal-close is-large" aria-label="close" onclick="closeModal()"></button>
         </div>
 
-        <div id="map"></div>
+        <div id="map"></div>        
+        <button id="addNode" class="button is-floating is-medium is-success" style="bottom: 8px;left: 16px; aria-label="Wymaga zalogowania" disabled"> 
+          <svg class="icon" viewBox="0 0 24 24">
+            <path fill="currentColor" d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z" />
+        </svg>
+      </button>
         <script src="./src/other-ui-stuff.js"></script>
         <script src="./src/map.js"></script>
         <script src="./src/osm-integration.js"></script>
