UI fixes, icons added, navbar fixed

--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
               </a>
 
               <span class="has-text-success-light has-text-weight-light navbar-item is-size-6 is-size-7-touch pl-0">
-                <span class="has-text-grey-light mr-2">|</span>tworzona z ❤️ przez&nbsp;
+                <span class="has-text-grey-light mr-2">|</span>tworzona z ❤️ 
+                przez&nbsp;
                 <span class="has-text-weight-medium"> <a href="https://openstreetmap.org.pl/" target="_blank"
                                                          title="Odwiedź stronę polskiej społeczności OSM"
                                                          rel="noopener" style="color:#effaf5;">OpenStreetMap Polska</a>
@@ -58,8 +59,11 @@
             <div id="navMenu" class="navbar-menu">
               <div class="navbar-end">
                 <div class="navbar-item">
-                  <span class="has-text-white has-text-weight-light mr-1">dodaliśmy do mapy już ⚡</span>
-                  <span class="has-text-white-ter is-size-5 has-text-weight-semibold" id="aed-number"></span>
+                    <svg class="icon" style="width:24px;height:24px" viewBox="0 0 24 24">
+                      <path fill="#ffc83d" d="M11 15H6L13 1V9H18L11 23V15Z" />
+                  </svg>
+                  <span class="has-text-white has-text-weight-light ">dodaliśmy już&nbsp;</span>
+                  <span class="has-text-white-ter has-text-weight-semibold" id="aed-number"></span>
                   <span class="has-text-white has-text-weight-light ml-1">AED</span>
                 </div>
                 <div class="navbar-item" id="span-login"></div>
@@ -69,7 +73,9 @@
               
                   <div class="navbar-dropdown">
                     <a class="navbar-item" id="logout">
-                      Wyloguj
+                      <svg class="icon mr-1" style="width:24px;height:24px" viewBox="0 0 24 24">
+                        <path fill="currentColor" d="M16,17V14H9V10H16V7L21,12L16,17M14,2A2,2 0 0,1 16,4V6H14V4H5V20H14V18H16V20A2,2 0 0,1 14,22H5A2,2 0 0,1 3,20V4A2,2 0 0,1 5,2H14Z" />
+                    </svg> Wyloguj
                     </a>
                   </div>
                 </div>
@@ -105,12 +111,10 @@
               </div>
 
               <footer class="card-footer">
-                  <div id="sidebar-footer-button-left">
+                  <div class="has-background-success-light card-footer-item has-text-centered is-size-7 has-text-weight-semibold" id="sidebar-footer-button-left">
                     <a href="" target="_blank" rel="noopener"
                        class="has-background-success-light card-footer-item has-text-centered is-size-7 has-text-weight-semibold"></a>
                   </div>
-                <a href="https://wiki.openstreetmap.org/wiki/Pl:Przewodnik_dla_pocz%C4%85tkuj%C4%85cych"
-                   class="has-background-success-light card-footer-item has-text-centered is-size-7 has-text-weight-semibold" target="_blank" rel="noopener" >Przewodnik OSM</a>
               </footer>
 
             </div>
