--- a/index.html
+++ b/index.html
@@ -134,11 +134,11 @@
         </div>
 
         <div id="map"></div>        
-        <button id="addNode" class="button is-floating is-medium is-success" style="bottom: 8px;left: 16px; aria-label="Wymaga zalogowania" disabled"> 
+        <button id="addNode" class="button is-floating is-medium is-success" style="bottom: 8px;left: 16px;" aria-label="Wymaga zalogowania" disabled>
           <svg class="icon" viewBox="0 0 24 24">
             <path fill="currentColor" d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z" />
-        </svg>
-      </button>
+          </svg>
+        </button>
         <script src="./src/other-ui-stuff.js"></script>
         <script src="./src/map.js"></script>
         <script src="./src/osm-integration.js"></script>
