--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                   <a id="navbar-username" class="navbar-link has-text-white-ter has-text-weight-light is-arrowless">
                   </a>
               
-                  <div class="navbar-dropdown">
+                  <div class="navbar-dropdown has-background-green">
                     <a class="navbar-item" id="logout">
                       <svg class="icon mr-1" style="width:24px;height:24px" viewBox="0 0 24 24">
                         <path fill="currentColor" d="M16,17V14H9V10H16V7L21,12L16,17M14,2A2,2 0 0,1 16,4V6H14V4H5V20H14V18H16V20A2,2 0 0,1 14,22H5A2,2 0 0,1 3,20V4A2,2 0 0,1 5,2H14Z" />
