moved code filling metadata to after map is loaded to avoid failure to add last refresh time

--- a/index.html
+++ b/index.html
@@ -64,7 +64,9 @@
                       <path fill="#ffc83d" d="M11 15H6L13 1V9H18L11 23V15Z" />
                   </svg>
                   <span class="has-text-white has-text-weight-light ">dodaliśmy już&nbsp;</span>
-                  <span class="has-text-white-ter has-text-weight-semibold" id="aed-number"></span>
+                  <span class="has-text-white-ter has-text-weight-semibold" id="aed-number">
+                      <button class="button is-loading is-rounded"></button>
+                  </span>
                   <span class="has-text-white has-text-weight-light ml-1">AED</span>
                 </div>
                 <div class="navbar-item" id="span-login"></div>
