--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </head>
 
     <body>
-          <nav class="navbar is-success p-1 has-shadow" role="navigation" aria-label="main navigation">
+          <nav class="navbar is-success p-1" role="navigation" aria-label="main navigation">
 
             <div class="navbar-brand">
               <a class="has-text-weight-light navbar-item has-text-white-ter is-size-4 is-size-5-mobile" href="#">
@@ -42,7 +42,7 @@
               </a>
 
               <span class="has-text-success-light has-text-weight-light navbar-item is-size-6 is-size-7-touch pl-0">
-                <span class="has-text-grey-light mr-2">|</span>tworzona z ❤️ 
+                <span class="has-text-grey-light mr-2 is-hidden-mobile">|</span>tworzona z ❤️ 
                 przez&nbsp;
                 <span class="has-text-weight-medium"> <a href="https://openstreetmap.org.pl/" target="_blank"
                                                          title="Odwiedź stronę polskiej społeczności OSM"
@@ -95,13 +95,13 @@
             <div class="card">
 
               <div id="sidebar-header">
-                <div class="columns is-vcentered is-flex p-1 mr-0">
+                <div class="columns is-vcentered is-flex mr-0">
 
                   <div class="column is-one-quarter is-one-fifth-mobile ">
                       <img class="image" src="./src/img/card-image.png" alt="Placeholder image" id="sidebar-card-image">
                   </div>
                   <div class="column">
-                      <p id="sidebar-caption" class="title has-text-white-ter has-text-weight-light py-2"></p>
+                      <p id="sidebar-caption" class="title has-text-white-ter has-text-weight-light"></p>
                   </div>
                   <button id="sidebar-button-close-touch" aria-label="Zamknij ekran boczny"
                           class="delete is-medium is-hidden-touch is-pulled-right close-button mr-2 mt-4"></button>
@@ -115,12 +115,11 @@
               </div>
 
               <footer class="card-footer">
-                  <div class="has-background-success-light card-footer-item has-text-centered is-size-7 has-text-weight-semibold" id="sidebar-footer-button-left">
+                  <div class="has-background-success-light card-footer-item has-text-centered is-size-7 has-text-weight-semibold p-1" id="sidebar-footer-button-left">
                     <a href="" target="_blank" rel="noopener"
                        class="has-background-success-light card-footer-item has-text-centered is-size-7 has-text-weight-semibold"></a>
                   </div>
               </footer>
-
             </div>
           </div>
 
