AED form changes (select -> radio)  + css file moved to separate file

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
         <script src="https://openingh.openstreetmap.de/opening_hours.js/opening_hours+deps.min.js" defer></script>
         <link href="https://unpkg.com/maplibre-gl@1.15.2/dist/maplibre-gl.css" rel="stylesheet" />
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css" />
-        <link rel="stylesheet" href="./src/nasz.css" />
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma-checkradio@2.1.2/dist/css/bulma-checkradio.min.css" />
+        <link rel="stylesheet" href="./src/css/main.css" />
     </head>
 
     <body>
