--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
           <nav class="navbar is-success p-1" role="navigation" aria-label="main navigation">
 
             <div class="navbar-brand">
-              <a class="has-text-weight-light navbar-item has-text-white-ter is-size-4 is-size-5-mobile" href="#">
-                Mapa <span class="has-text-weight-semibold pl-1 r-1">AED</span>
+              <a class="has-text-weight-light navbar-item has-text-white-ter is-size-4 is-size-5-mobile pr-1 pl-2" href="#">
+                Mapa <span class="has-text-weight-semibold pl-1 pr-1">AED</span>
               </a>
 
               <span class="has-text-success-light has-text-weight-light navbar-item is-size-6 is-size-7-touch pl-0">
