--- a/index.html
+++ b/index.html
@@ -151,16 +151,16 @@
           </svg>
         </button>
         <button id="addNode-mobile-2" class="button is-floating is-medium is-success is-hidden-desktop is-hidden"
-                style="bottom: 8px;left: 16px;" aria-label="Zapisz">
+                style="bottom: 8px;left: 16px;" aria-label="Dalej">
           <svg class="icon" viewBox="0 0 24 24">
-            <path fill="currentColor" d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z" />
-          </svg> Dalej
+            <path fill="currentColor" d="M4,11V13H16L10.5,18.5L11.92,19.92L19.84,12L11.92,4.08L10.5,5.5L16,11H4Z" />
+          </svg>
         </button>
-        <button id="addNode-mobile-3" class="button is-floating is-medium is-success is-hidden-desktop is-hidden"
-                style="bottom: 8px;left: 156px;" aria-label="Zamknij">
+        <button id="addNode-mobile-3" class="button is-floating is-medium is-danger is-hidden-desktop is-hidden"
+                style="bottom: 8px;left: 156px;" aria-label="Anuluj">
           <svg class="icon" viewBox="0 0 24 24">
-            <path fill="currentColor" d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z" />
-          </svg> Anuluj
+            <path fill="currentColor" d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z" />
+          </svg>
         </button>
         <script src="./src/other-ui-stuff.js"></script>
         <script src="./src/map.js"></script>
