OSM caption - added mobile style

--- a/index.html
+++ b/index.html
@@ -39,17 +39,21 @@
 
             <div class="navbar-brand">
               <a class="has-text-weight-light navbar-item has-text-white-ter is-size-4 is-size-5-mobile pr-1 pl-2" href="#">
-                Mapa <span class="has-text-weight-semibold pl-1 pr-1">AED</span>
+                Mapa <span class="has-text-weight-semibold pl-1">AED</span>
               </a>
 
-              <span class="has-text-success-light has-text-weight-light navbar-item is-size-6 is-size-7-touch pl-0">
-                <span class="has-text-grey-light mr-2 is-hidden-mobile">|</span>tworzona z ❤️ 
-                przez&nbsp;
-                <span class="has-text-weight-medium"> <a href="https://openstreetmap.org.pl/" target="_blank"
-                                                         title="Odwiedź stronę polskiej społeczności OSM"
-                                                         rel="noopener" style="color:#effaf5;">OpenStreetMap Polska</a>
-                </span>
+              <div class="navbar-item is-hidden-touch">
+                <span class="has-text-grey-light has-text-weight-light mr-3">|</span>
+                <span class="has-text-weight-light is-size-6 is-size-7-touch pl-0">
+                tworzona z ❤️ przez <a class="has-text-weight-medium" href="https://openstreetmap.org.pl/" target="_blank" title="Odwiedź stronę polskiej społeczności OSM" rel="noopener" style="color:#effaf5;">OpenStreetMap Polska</a>
               </span>
+             </div>
+             <div class="navbar-item is-hidden-desktop osm-caption-mobile">
+              <span class="has-text-grey-light has-text-weight-light mr-3 is-size-4">|</span>
+              <span class="has-text-weight-light is-size-6 is-size-7-touch pl-0">
+              tworzona z ❤️ przez <a class="has-text-weight-medium" href="https://openstreetmap.org.pl/" target="_blank" title="Odwiedź stronę polskiej społeczności OSM" rel="noopener" style="color:#effaf5;">OpenStreetMap Polska</a>
+            </span>
+           </div>
 
               <a role="button" class="navbar-burger has-text-white-ter is-transparent" data-target="navMenu" aria-label="menu" aria-expanded="false">
                 <span aria-hidden="true"></span>
