aed-number button ui

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                   </svg>
                   <span class="has-text-white has-text-weight-light ">dodaliśmy już&nbsp;</span>
                   <span class="has-text-white-ter has-text-weight-semibold" id="aed-number">
-                      <button class="button is-loading is-rounded"></button>
+                      <button class="button is-success has-background-green is-loading is-small"></button>
                   </span>
                   <span class="has-text-white has-text-weight-light ml-1">AED</span>
                 </div>
