added link to osm wiki page for beginners

--- a/index.html
+++ b/index.html
@@ -65,6 +65,10 @@
             <div id="navMenu" class="navbar-menu">
               <div class="navbar-end">
                 <div class="navbar-item">
+                    <a href="https://wiki.openstreetmap.org/wiki/Pl:Przewodnik_dla_pocz%C4%85tkuj%C4%85cych"
+                       class="button is-success has-text-weight-light is-outlined" target="_blank" rel="noopener">Przewodnik OSM</a>
+                </div>
+                <div class="navbar-item">
                     <svg class="icon" style="width:24px;height:24px" viewBox="0 0 24 24">
                       <path fill="#ffc83d" d="M11 15H6L13 1V9H18L11 23V15Z" />
                   </svg>
