--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
         <link rel="apple-touch-icon" sizes="180x180" href="src/favicon/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="./src/favicon/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="./src/favicon/favicon-16x16.png">
-        <link rel="manifest" href="./src/favicon/site.webmanifest">
+        <link rel="manifest" href="site.webmanifest">
         <link rel="mask-icon" href="./src/favicon/safari-pinned-tab.svg" color="#5bbad5">
         <link rel="shortcut icon" href="./src/favicon/favicon.ico">
         <meta name="msapplication-TileColor" content="#da532c">
         <meta name="msapplication-config" content="./src/favicon/browserconfig.xml">
-        <meta name="theme-color" content="#dbdbdb">
+        <meta name="theme-color" content="#f5f5f5">
         <meta property="og:type" content="website">
         <meta property="og:url" content="https://aed.openstreetmap.org.pl">
         <meta property="og:title" content="AED - mapa defibrylatorów">
