--- a/index.html
+++ b/index.html
@@ -65,18 +65,18 @@
             <div id="navMenu" class="navbar-menu">
               <div class="navbar-end">
                 <div class="navbar-item">
+                  <svg class="icon" style="width:24px;height:24px" viewBox="0 0 24 24">
+                    <path fill="#ffc83d" d="M11 15H6L13 1V9H18L11 23V15Z" />
+                </svg>
+                <span class="has-text-white has-text-weight-light ">dodaliśmy już&nbsp;</span>
+                <span class="has-text-white-ter has-text-weight-semibold" id="aed-number">
+                    <button class="button is-success has-background-green is-loading is-small"></button>
+                </span>
+                <span class="has-text-white has-text-weight-light ml-1">AED</span>
+              </div>
+                <div class="navbar-item">
                     <a href="https://wiki.openstreetmap.org/wiki/Pl:Przewodnik_dla_pocz%C4%85tkuj%C4%85cych"
                        class="button is-success has-text-weight-light is-outlined" target="_blank" rel="noopener">Przewodnik OSM</a>
-                </div>
-                <div class="navbar-item">
-                    <svg class="icon" style="width:24px;height:24px" viewBox="0 0 24 24">
-                      <path fill="#ffc83d" d="M11 15H6L13 1V9H18L11 23V15Z" />
-                  </svg>
-                  <span class="has-text-white has-text-weight-light ">dodaliśmy już&nbsp;</span>
-                  <span class="has-text-white-ter has-text-weight-semibold" id="aed-number">
-                      <button class="button is-success has-background-green is-loading is-small"></button>
-                  </span>
-                  <span class="has-text-white has-text-weight-light ml-1">AED</span>
                 </div>
                 <div class="navbar-item" id="span-login"></div>
                 <div id="navbar-logged" class="navbar-item has-dropdown is-hoverable">
@@ -119,7 +119,7 @@
                 </div>
               </div>
 
-              <div class="card-content">
+              <div class="card-content pt-3 pb-3">
                 <div id="sidebar-content-div" class="content"></div>
               </div>
 
@@ -136,7 +136,7 @@
           <div class="modal-background"></div>
               <div class="modal-card">
                 <header class="modal-card-head">
-<!--                  <p class="modal-card-title">Modal title</p>-->
+                <!--  <p class="modal-card-title">Modal title</p>-->
                   <button class="delete" aria-label="close" onclick="closeModal()"></button>
                 </header>
                 <section id="modal-content" class="modal-card-body">
