Probable form fix

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
               </div>
 
               <footer class="card-footer">
-                  <div class="has-background-success-light card-footer-item has-text-centered is-size-7 has-text-weight-semibold p-1" id="sidebar-footer-button-left">
+                  <div class="has-background-success-light card-footer-item is-block has-text-centered is-size-7 has-text-weight-semibold p-1" id="sidebar-footer-button-left">
                     <a href="" target="_blank" rel="noopener"
                        class="has-background-success-light card-footer-item has-text-centered is-size-7 has-text-weight-semibold"></a>
                   </div>
