Partner - changed font

--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
         <div id="map"></div> 
         <footer class="footer"> 
           <div class="footer-partners is-white">
-            <div class="columns is-mobile is-gapless is-vcentered">
-              <div class="column is-narrow"><span class="has-text-grey-darker is-size-6 is-size-7-mobile ml-3">Partner:</span></div>
+            <div class="columns is-mobile is-gapless">
+              <div class="column is-narrow mt-2 ml-1"><span class="span-partners is-family-secondary has-text-grey-darker has-text-weight-semibold is-size-6 is-size-7-mobile ml-3">Partner:</span></div>
               <div class="column is-narrow"><a target="_blank" title="Główny Urząd Geodezji i Kartografii" rel="noopener" href="http://www.gugik.gov.pl/"><img class="image-gugik pl-4 pt-1" src="./src/img/logo-gugik.png" /></a></div>
               <div class="column">
                 <div class="attrib is-size-7 has-text-weight-light">
