added canonical url + css formatting

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="title" content="AED - mapa defibrylatorów">
         <meta name="description" content="Mapa defibrylatorów AED w Polsce oparta o otwarte dane z projektu OpenStreetMap">
         <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no" />
+        <link rel="canonical" href="https://aed.openstreetmap.org.pl" />
         <link rel="apple-touch-icon" sizes="180x180" href="src/favicon/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="./src/favicon/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="./src/favicon/favicon-16x16.png">
