fixed incorrectly closed tag

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                 </div>
               </div>
             </div>            
-          </nav>
+          </div>
         </footer>
 
         <button id="addNode" class="button is-floating is-medium is-success is-hidden-touch add-button"
