--- a/index.html
+++ b/index.html
@@ -151,11 +151,12 @@
         </div>
 
         <div id="map"></div> 
-        <footer class="footer"> 
+        <footer> 
           <div class="footer-partners is-white">
-            <div class="columns is-mobile is-gapless">
-              <div class="column is-narrow mt-2 ml-1"><span class="span-partners is-family-secondary has-text-grey-darker has-text-weight-semibold is-size-6 is-size-7-mobile ml-3">Partner:</span></div>
-              <div class="column is-narrow"><a target="_blank" title="Główny Urząd Geodezji i Kartografii" rel="noopener" href="http://www.gugik.gov.pl/"><img class="image-gugik pl-4 pt-1" src="./src/img/logo-gugik.png" /></a></div>
+            <div class="columns is-vcentered is-mobile is-gapless">
+              <div class="column is-narrow ml-2">
+                <span class="span-partners is-family-secondary has-text-grey-dark has-text-weight-medium is-size-6 is-size-7-mobile ml-3" >Partner:</span></div>
+              <div class="column is-narrow ml-1 ml-4 mt-1"><a target="_blank" title="Główny Urząd Geodezji i Kartografii" rel="noopener" href="http://www.gugik.gov.pl/"><img class="image-gugik" src="./src/img/logo-gugik.png" /></a></div>
               <div class="column">
                 <div class="attrib is-size-7 has-text-weight-light">
                 <span id="refresh-time" class="is-hidden-mobile pr-1">Ostatnia aktualizacja danych OSM: 
@@ -168,20 +169,23 @@
           </nav>
         </footer>
 
-        <button id="addNode" class="button is-floating is-medium is-success is-hidden-touch add-button"
-                style="bottom: 8px;left: 16px;" aria-label="Wymaga zalogowania" disabled>
+        <button id="addNode" 
+        class="button is-floating is-medium is-success is-hidden-touch add-button" 
+        aria-label="Wymaga zalogowania" disabled style="bottom: 8px;left: 16px;">
           <svg class="icon" viewBox="0 0 24 24">
             <path fill="currentColor" d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z" />
           </svg>
         </button>
-        <button id="addNode-mobile-1" class="button is-floating is-medium is-success is-hidden-desktop add-button"
-                style="bottom: 8px;left: 16px;" aria-label="Wymaga zalogowania">
+        <button id="addNode-mobile-1" 
+        class="button is-floating is-medium is-success is-hidden-desktop add-button" 
+        aria-label="Wymaga zalogowania" style="bottom: 8px;left: 16px;">
           <svg class="icon" viewBox="0 0 24 24">
             <path fill="currentColor" d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z" />
           </svg>
         </button>
-        <button id="addNode-mobile-2" class="button is-floating is-medium is-success is-hidden-desktop is-hidden add-button"
-                style="bottom: 8px;left: 16px;" aria-label="Dalej">
+        <button id="addNode-mobile-2" 
+        class="button is-floating is-medium is-success is-hidden-desktop is-hidden add-button" 
+        aria-label="Dalej" style="bottom: 8px;left: 16px;">
           <svg class="icon" viewBox="0 0 24 24">
             <path fill="currentColor" d="M4,11V13H16L10.5,18.5L11.92,19.92L19.84,12L11.92,4.08L10.5,5.5L16,11H4Z" />
           </svg>
