changed desktop button to behave similarly to mobile button i.e. opening modal informing if higher zoom is needed or user needs to log in

--- a/index.html
+++ b/index.html
@@ -172,7 +172,8 @@
             </div>            
           </div>
         </footer>
-        <button id="addNode" class="button is-success is-large is-hidden-touch has-text-weight-light" disabled style="bottom: 8px;left: 16px;  position: fixed; bottom: 75px; right: 40px;">
+        <button id="addNode" class="button is-success is-large is-hidden-touch has-text-weight-light"
+                style="bottom: 8px;left: 16px;  position: fixed; bottom: 75px; right: 40px;">
           <svg class="icon mr-2" viewBox="0 0 24 24">
             <path fill="currentColor" d="M15 17H18V14H20V17H23V19H20V22H18V19H15V17M9 6.5C10.4 6.5 11.5 7.6 11.5 9S10.4 11.5 9 11.5 6.5 10.4 6.5 9 7.6 6.5 9 6.5M9 2C12.9 2 16 5.1 16 9C16 14.2 9 22 9 22S2 14.2 2 9C2 5.1 5.1 2 9 2M9 4C6.2 4 4 6.2 4 9C4 10 4 12 9 18.7C14 12 14 10 14 9C14 6.2 11.8 4 9 4Z" />
         </svg>
@@ -180,7 +181,7 @@
         </button>
         <button id="addNode-mobile-1" 
         class="button is-floating is-medium is-success is-hidden-desktop add-button" 
-        aria-label="Wymaga zalogowania" style="bottom: 8px;left: 16px;">
+        aria-label="Dodaj AED" style="bottom: 8px;left: 16px;">
           <svg class="icon" viewBox="0 0 24 24">
             <path fill="currentColor" d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z" />
           </svg>
